# AI-Evaluation-Pipeline

./: .env.example  .env.production  DEPLOYMENT.md  Dockerfile  README.md  SYSTEM_PROMPT.md  capacitor.config.ts  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
ai-eval-mobile/: index.html
android/app/: build.gradle
android/app/src/main/java/com/aieval/app/: MainActivity.java
android/app/src/main/res/values/: strings.xml
config/: config.yaml  prompts.py
data/: evaluation_results.db
data/datasets/: sample_customer_support.jsonl
deploy/grafana/provisioning/dashboards/: dashboards.yaml
deploy/grafana/provisioning/datasources/: prometheus.yaml
deploy/kubernetes/: 00-namespace.yaml  01-deployment.yaml  02-postgres.yaml
deploy/nginx/: nginx.conf
deploy/prometheus/: prometheus.yml
src/: App.css  App.tsx  main.py
src/api/: production.py  routes.py
src/core/: __init__.py  config.py  exceptions.py
src/dashboard/: app.py
src/evaluation/: __init__.py  data_ingestion.py  executor.py  metrics.py
src/models/: __init__.py  anthropic_adapter.py  base.py  groq_adapter.py  openai_adapter.py
src/storage/: __init__.py  database.py
tests/: test_evaluation.py
